# EpipolarConsistency

./: CMakeLists.txt  examples.gitignore  readme.md  readme.txt
cmake_scripts/: Config.cmake.in  ConfigVersion.cmake.in  LibEpipolarConsistencyConfig.cmake  LibGeometryCalibrationConfig.cmake  LibProjectiveGeometryConfig.cmake  LibRayCastBackprojectConfig.cmake  LibSimpleConfig.cmake  LibSimpleConfigVersion.cmake  LibUtilsCudaConfig.cmake  LibUtilsCudaConfigVersion.cmake  LibUtilsGLConfig.cmake  LibUtilsQtConfig.cmake  add_package.cmake  findAndTestCUDA.cmake  has_cuda_gpu.cpp  qt5_win32_copy_dlls.cmake
code/HeaderOnly/LibOpterix/: Opterix.hxx  ParameterGui.hxx  ParameterModel.hxx  WrapNLOpt.hxx
code/HeaderOnly/NRRD/: BaseTypes.hxx  GetSetCmdLine.hxx  GetSetMinimal.hxx  StringConversion.hxx  StringType.hxx  StringUtil.hxx  nrrd.hxx  nrrd_connected_components.hxx  nrrd_frst.hxx  nrrd_image.hxx  nrrd_image_stack.hxx  nrrd_image_view.hxx  nrrd_itk.hxx  nrrd_local_crorrelation.hxx  nrrd_lowpass.hxx  nrrd_metaio.hxx  nrrd_morphology.hxx  nrrd_transform.hxx
code/HeaderOnly/Utils/: ITKUtils.hxx  ProgressInterface.hxx  Projtable.hxx  TimerWin32.hxx  UglyXML.hxx
code/LibEpipolarConsistency/: CMakeLists.txt  EpipolarConsistency.cpp  EpipolarConsistency.h  EpipolarConsistencyCommon.hxx  EpipolarConsistencyDirect.cpp  EpipolarConsistencyDirect.cu  EpipolarConsistencyDirect.h  EpipolarConsistencyRadonIntermediate.cpp  EpipolarConsistencyRadonIntermediate.cu  EpipolarConsistencyRadonIntermediate.h  EpipolarConsistencyRadonIntermediateCPU.hxx  RadonIntermediate.cpp  RadonIntermediate.cu  RadonIntermediate.h  Rectification.cu  RectifiedFBCC.h
code/LibEpipolarConsistency/Gui/: ComputeRadonIntermediate.hxx  DisplayGeometry.hxx  FDCTMotionCorrection.hxx  InputDataDirect.cpp  InputDataDirect.h  InputDataRadonIntermediate.cpp  InputDataRadonIntermediate.h  PreProccess.cpp  PreProccess.h  Registration.h  SingleImageMotion.h  SingleImageMotion.hxx  Visualization.h
code/LibGeometryCalibration/: BeadDetection.cpp  BeadDetection.h  BeadPhantomGui.hxx  CMakeLists.txt  EstimateProjectionMatrix.cpp  EstimateProjectionMatrix.h  GeometryCalibration.cpp  GeometryCalibration.h  PhantomPDS2.cpp  PhantomPDS2.h  main_pds2.cpp
code/LibProjectiveGeometry/: CMakeLists.txt  CameraOpenGL.hxx  EigenToStr.hxx  EstimateProjectionMatrix.cpp  EstimateProjectionMatrix.h  GeometryVisualization.hxx  ProjectionMatrix.cpp  ProjectionMatrix.h  ProjectiveGeometry.hxx  SingularValueDecomposition.cpp  SingularValueDecomposition.h  SourceDetectorGeometry.cpp  SourceDetectorGeometry.h
code/LibProjectiveGeometry/LibOpterix/: Opterix.hxx  ParameterGui.hxx  ParameterModel.hxx
code/LibProjectiveGeometry/Models/: ModelCameraKRt.hxx  ModelCameraSimilarity2D3D.hxx  ModelFDCTCalibrationCorrection.hxx  ModelHomography2D.hxx  ModelHomography3D.hxx  ModelSimilarity2D.hxx  ModelSimilarity3D.hxx  ModelTrajectoryIEC61217.hxx
code/LibRayCastBackproject/: CMakeLists.txt  Reconstruction.cu  VolumeRendering.cpp  VolumeRendering.cu  VolumeRendering.h  VoxelData.cpp  VoxelData.cu  VoxelData.h  ray_box_intersection.hxx  vr_cuda.hxx  vr_ray_geom_setup.cu  vr_raycast_debug.cu  vr_raycast_drr.cu  vr_raycast_ea_1Dtf.cu  vr_raycast_iso.cu  vr_raycast_mip.cu
code/LibSimple/: BufferUtils.h  CMakeLists.txt  SimpleEmptySpaceSkipping.h  SimpleGL.cpp  SimpleGL.h  SimpleMHD.cpp  SimpleMHD.h  SimpleOptimizer.cpp  SimpleOptimizer.h  SimpleQTGL.cpp  SimpleQTGL.h  SimpleRayCastPass.cpp  SimpleRayCastPass.h  SimpleVR.cpp  SimpleVR.h
code/LibSimple/GL/: glad.c  glad.h
code/LibUtilsCuda/: CMakeLists.txt  CudaAlgorithms.cpp  CudaAlgorithms.h  CudaBindlessTexture.cpp  CudaBindlessTexture.cu  CudaBindlessTexture.h  CudaConvolution.cu  CudaMemory.cpp  CudaMemory.h  CudaTextureArray.hxx  TestCudaUtils.cpp  TestCudaUtils.cu  UtilsCuda.hxx
code/LibUtilsCuda/culaut/: culaut.hxx  xgeinv.hxx  xgemm.hxx  xgemv.hxx  xprojectionmatrix.hxx  xprojectivegeometry.hxx
code/LibUtilsQt/: CMakeLists.txt  EventFilters.cpp  EventFilters.h  Figure.hxx  FigureWindow.cpp  FigureWindow.h  GraphicsItemConvexMesh.hxx  GraphicsItems.hxx  Plot.hxx  ProjectionParameters.hxx  QCameraView.cpp  QCameraView.h  QCustomPlot.cpp  QGLPlot3D.cpp  QGLPlot3D.h  nrrdqt.hxx
config/: VisualizeECC.ini
config/example_data/: proj000.nrrd  proj040.nrrd
matlab/: ecc_demo.m  ecc_load_data.m  ecc_plot_uv.m
matlab/ecc_demo/: ecc_computeK01.m  ecc_compute_consistency.m  ecc_compute_dtr.m  ecc_sample_dtr.m  ecc_sample_dtr_debug.m  line_to_angle_distance.m
matlab/pluecker/: join.m  join3.m  meet.m  pluecker_closest_point_to_origin.m  pluecker_direction.m  pluecker_distance_to_origin.m  pluecker_join.m  pluecker_matrix.m  pluecker_matrix3.m  pluecker_matrix_dual.m  pluecker_meet.m  pluecker_moment.m
matlab/utility/: camera_normalize.m  ecc_show_lines.m  line_stroke.m
tools/ComputeRadonIntermediate/: CMakeLists.txt  ComputeRadonIntermediate.cpp
tools/ConsistencyDemo/: CMakeLists.txt  main.cpp
tools/FDCTCalibrationCorrection/: AlgorithmsNLoptFDCTCalibrationCorrection.hxx  CMakeLists.txt  FDCTCalibrationCorrection.cpp
tools/FDCTMotionCorrection/: CMakeLists.txt  ModelFDCT.hxx  main_gradient_free.cpp
tools/FluoroTracking/: CMakeLists.txt  FluoroTracking.cpp  FluoroTracking_rectify.cpp  compute_line_integrals.cu
tools/Registration/: CMakeLists.txt  Registration.cpp  Registration3D3D.hxx  RegistrationIntensityBased.cpp  warp3d.cu
tools/Registration2D3D/: CMakeLists.txt  ComputeDRR.cpp  main.cpp
tools/TrajectoryView/: CMakeLists.txt  file.xcf  icon_win.aps  main_trajectoryview.cpp
tools/VisualizeECC/: CMakeLists.txt  VisualizeECC.cpp  VisualizeECC_ComputedTomography.cpp  VisualizeECC_RadonIntermediate.cpp  draw_epipolar_lines.hxx
tools/VolumeRendering/: CMakeLists.txt  volume_renderer.cpp
tools/nrrdView/: CMakeLists.txt  file.xcf  nrrdView.cpp
tools/projtable2ompl/: CMakeLists.txt  ompl2projtable.cpp  ompl2rtkgeometry.cpp  projtable2ompl.cpp
